# lab

./: .gitignore  RANDOM_FOREST_README.md  README.md  async_log.txt  predict.py  pyproject.toml  train_model.py
algorithms/data_structures/: double_linked_list.py  linked_lists.py
dvc/: predict.py  train_model.py
dvc/models/: rf.dvc
labs/agents/: main.py
labs/dotenv_load_test/: main.py
labs/logger/: config.yaml  lab2_main.py  lab3_main.py  lab5_main.py  lab6_main.py  pydupa.py
labs/logger/debug/: helper.py
labs/session_manager/: LogProcessor.py  ServiceProcessor.py  SessionManager.py  config.yaml  main.py
notebooks/: naive_bayes.ipynb
tests/algorithms/data_structures/: test_double_linked_list.py  test_linked_lists.py  test_single_linked_lists.py
vector-db/: main.py
