[project]
name = "lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.4",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "joblib>=1.4.2",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.4",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
]
